--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,12 @@ grad_cam==1.5.5
 kagglehub==0.3.12
 matplotlib==3.10.5
 numpy==2.2.6 
-pandas==2.3.1
+pandas==2.3.2
 Pillow==11.3.0
 scikit_learn==1.7.1
+scikit_posthocs==0.11.4
+scipy>=1.15.0
+seaborn==0.13.2
 torch==2.7.1
 torchmetrics==1.8.1
 torchvision==0.22.1
